初始化日志完成

--- a/doc/2.日志处理.md
+++ b/doc/2.日志处理.md
@@ -40,3 +40,36 @@ sugar.Infof("Failed to fetch URL: %s", "abc")
 		zap.Duration("backoff", time.Second),
 	)
 ```
+#### 日志切割
+[zap官方文档](https://github.com/uber-go/zap/blob/master/FAQ.md#does-zap-support-log-rotation)
+
+##### quick Start
+https://github.com/gin-contrib/zap
+````go
+    // 日志轮转
+writer := &lumberjack.Logger{
+Filename:   "./logs/log.log", // 日志文件路径
+MaxSize:    1,                // 每个日志文件的最大大小（单位：M）
+MaxBackups: 30, // 日志文件最多保存多少个备份
+MaxAge:     7, // 文件最多保存多少天
+}
+
+
+// 写入日志文件用的CoreFile
+zapCoreFile := zapcore.NewCore(
+zapcore.NewJSONEncoder(encoderConfig), // 编码器配置
+zapcore.AddSync(writer), // 输出到文件
+atomicLevel,             // 日志级别
+)
+
+````
+
+##### 日志切割测试
+```go
+	// 日志切割测试
+	for i := 0; i < 100000; i++ {
+		logger.Info("这是一条测试info日志",
+			zap.String("级别", sc.LogLevel),
+		)
+	}
+```
